frontend/src/components/friends/friends.css
.friends-below-navbar-container {
    display: flex;
    width: 100%;
    margin-top: 60px;
    min-height: 700px;
}


/* FRIENDS INDEX SIDEBAR */

.friends-sidebar-container {
    height: 90%;
    min-height: 800px;
    width: 300px;
    min-width: 300px;
    border-right: 1px solid black;
    background-color: #3A3535;
    color: white;
    padding-left: 25px;
    position: fixed;
    overflow-y: auto;
    padding-bottom: 100px;

}

.friends-sidebar-header {
    margin-top: 25px;
    font-size: 26px;
    font-weight: 600;
}

.friends-sidebar-birthdays-header {
    font-weight: 400;
}


.friend-cards-container ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    width: 100%;
    padding-left: 326px;
}

.friend-card-outer-container {
    margin: 30px;
}

.friend-card-container {
    box-sizing: border-box;
    height: 250px;
    width: 250px;
    border: 1px solid black;
    padding: 20px;
    border-radius: 10px;
/*     animation: loading 3s; */
}

@keyframes loading {
    0% {
        opacity: 0%
    }
    100% {
        opacity: 100%
    }
}

.friends-index-loading-box {
    background-color: #e2e2e2;
    box-sizing: border-box;
    height: 250px;
    width: 250px;
    padding: 20px;
    border-radius: 10px;
    margin: 30px;
    animation: 1s linear infinite shimmer2;
}

@keyframes shimmer2 {
    0% {
        opacity: 65%;
    }

    50% {
        opacity: 30%;
    }

    100% {
        opacity: 65%;
    }
}


/* .friend-card-container:hover {
    width: 500px;
    height: 500px;
    z-index: 10;
    transition: all 3s;
} */

/* FRIEND INDEX ITEMS */

.friend-card-container ul {
    list-style: none;
    margin: 0;
    padding: 0;
    display: block;
    text-align: center;
    height: 206px;
}

.friends-card-wrapper {
    margin-bottom: 100px;
}

.friend-card-container ul li:not(:first-child) {
    margin-bottom: 15px;
}

.friend-index-item-name {
}

.friend-index-item-header {
    margin: -20px -20px 10px -20px;
    border-bottom: 1px solid black;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    height: 40px;
    font-size: 19px;
    background-color: #3a3535d8;
    color: white;
    white-space: nowrap;
    border-top-left-radius: 7px;
    border-top-right-radius: 7px;
}

.friend-index-item-header > p {
    padding: 0 10px;
    display: inline-flex;
    justify-self: flex-start;
    width: 200px;
    height: 40px;
    align-items: center;
    overflow: hidden;
}

.friend-index-item-header > i {
    margin-right: 5px;
}

.friend-index-item-header > i:last-of-type {
    margin-right: 10px;
}

.friend-index-item-header > i:hover {
    color: #fc7314;
}

/* .friend-card-container ul::after {
    content: "click for more details";
    text-align: center;
    opacity: 0%;
} */

.friend-card-click-for-details {
    text-align: center;
    opacity: 0.5;
    display: none;
}

.friend-card-container ul::after:hover {
    content: "click for more details";
    text-align: center;
    display: block;
}


/* CREATE FRIEND PROFILE LINK CARD */

.friend-create-link-card {
    text-align: center;
    cursor: pointer;
    transition: 0.5s;
    color: #393535;
    /* box-shadow: 0px 3px 5px 2px rgba(0,0,0,0.75) */
}

.friend-create-link-card:hover, .friend-card-container:hover {
    text-align: center;
    cursor: pointer;
    transition: 0.5s;
    transform: scale(1.025);
    box-shadow: 0px 3px 5px 2px rgba(0,0,0,0.75);
}

.friend-card-container:hover .friend-card-click-for-details {
    display: block;
}

.friend-create-link-card-text {
    font-size: 40px;
}

.friend-create-link-card-plus-sign {
    font-size: 80px;
    margin-top: -20px;
}



/* FRIEND SHOW PAGE */

.friend-show-container {
    width: 100%;
    margin: 40px;
    height:  auto;
}

.friend-show-container ul {
    list-style: none;
    padding: 0;
    margin: 0;
    border: 1px solid black;
    padding: 30px;
    border-radius: 10px;
    margin-left: 326px;
    margin-bottom: 100px;
}

#friend-show-name-text {
    font-size: 35px;
    font-weight: 600;
    display: flex;
}

.friend-show-name-buttons-container {
    display: flex;
    margin-left: auto;
    align-items: center;
}

.friend-show-name-buttons-container > div {
    width: 100px;
    height: 35px;
    margin-right: 10px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 20px;
    font-weight: 400;
    background-color: white;
    color: black;
    border-radius: 10px;
    cursor: pointer;
}

.friend-show-name-buttons-container > div:first-of-type {
    border: 2px solid #FC7314;
}

.friend-show-name-buttons-container > div:last-of-type {
    border: 2px solid rgb(194, 23, 0);
}

.friend-show-name-buttons-container > div:first-of-type:hover {
    background-color: #FC7314;
    color: white;
    border: 2px solid rgb(190, 190, 190);
}

.friend-show-name-buttons-container > div:last-of-type:hover {
    background-color: rgb(194, 23, 0);
    color: white;
    border: 2px solid rgb(190, 190, 190);
}

#friend-show-hobbies-text {
    text-align: center;
}

.friend-show-container ul li {
    margin-bottom: 25px;
    font-size: 20px;
}

.friend-show-divider-line {
    height: 1px;
    border: none;
    background-color: lightgray;
    margin: 20px 0 25px 0;
}

.friend-show-age-tag, .friend-show-location-tag, .friend-show-siblings-tag, .friend-show-birthday-tag, .friend-show-hobbies-tag, .friend-show-tag {
    background-color: #FF7314;
    margin-right: 10px;
    border-radius: 10px;
    color: white;
    transition: all 3s;
    animation: float-effect 3s;
    transform: translateY(0px);
}

.friend-show-div {
    transition: all 3s;
    animation: float-effect 3s;
    transform: translateY(0px);
    margin-top: 3px;
}

.friend-show-div:hover {
    transform: translateY(-5px);
    transition: all 2s;
    cursor: pointer;
}

#friend-show-previous-jobs-div {
    min-width: 157px;
}

.friend-show-age-tag {
    padding: 1px 6px 7px 7px;
}

@keyframes float-effect {
    0% {
        transform: translateY(0px);
    }
    50% {
        transform: translateY(-5px);
    }
    100% {
        transform: translateY(0px);
    }
}

.friend-show-tag:hover {
    transform: translateY(-5px);
    transition: all 2s;
    cursor: pointer;
}

.friend-show-li {
    display: flex;
    align-items: center;
}

.friend-index-item-li {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.friend-show-text {
    margin-top: 3px;
}

.friend-show-tag {
    padding: 3px 6px 6px 8px;
    /* height: 29px;
    box-sizing: border-box; */
}

.friend-show-header {
    font-size: 21px;
}

.friends-sidebar-birthdays-item {
    width: 90%;
    color: black;
    border-radius: 10px;
    padding: 10px;
    margin-bottom: 10px;
}
.friends-sidebar-item-white {
    background-color: white;
}
.friends-sidebar-item-orange {
    background-color: #d6d6d6;
}
.friends-sidebar-birthdays-item > div:first-of-type { 
    font-weight: 600;
}

.view-all-friends-wrapper {
    width: 100px;
    height: 35px;
    margin-right: 10px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 20px;
    font-weight: 400;
    background-color: white;
    color: black;
    border-radius: 10px;
    border: 2px solid black;
}

.view-all-friends-wrapper:hover {
    background-color: rgb(58,53,52);
    border: 2px solid rgb(190, 190, 190);
    color: white;
    cursor: pointer;
}

/* friendless page */

.friendless-container {
    width: 100%;
    height: auto;
    margin: 40px;
}

.friendless-text{
    padding: 0;
    margin: 0;
    border: 1px solid black;
    padding: 30px;
    border-radius: 10px;
    margin-left: 326px;
    text-align: center;
}


/* SEARCH RESULTS HEADER */

.search-results-header-container {
    padding-left: 359px;
}

.back-to-main-button {
    text-decoration: underline;
    margin: 30px 0;
    cursor: pointer;
}

.search-results-header {
    font-size: 38px;
}

.no-friends-found-msg {
    margin-left: -57px;
    margin-top: 20px;
    font-size: 20px;
}

